src/main/resources/Patterns/CircuitBreaker/envoy/envoy-circuitbreaker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-${BACKEND_SERVICE}
  namespace: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-${BACKEND_SERVICE}
      run: ${BACKEND_SERVICE}
  template:
    metadata:
      labels:
        app: envoy-${BACKEND_SERVICE}
        run: ${BACKEND_SERVICE}
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.28-latest
          args: ["-c", "/etc/envoy/envoy.yaml"]
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy
          ports:
            - containerPort: ${BACKEND_PORT}
              name: envoy-port
      volumes:
        - name: envoy-config
          configMap:
<<<<<<< HEAD
            name:  envoy-circuitbreaker-config #envoy-config
=======
            name: envoy-config-${BACKEND_SERVICE}
>>>>>>> 6d246dd86bd8744473a8666ed60ed311e98d9c38
---
apiVersion: v1
kind: Service
metadata:
  name: ${BACKEND_SERVICE}
  namespace: user
  labels:
    app: envoy
spec:
  ports:
    - port: ${BACKEND_PORT}
      targetPort: ${BACKEND_PORT}
  selector:
    app: envoy-${BACKEND_SERVICE}
