src/main/resources/Patterns/CircuitBreaker/envoy/envoy-config.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: |
    static_resources:
      clusters:
        - name: ${SERVICE_NAME}
          connect_timeout: 1s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
            thresholds:
              - priority: DEFAULT
                max_connections: ${MAX_CONNECTIONS}
                max_pending_requests: ${MAX_PENDING_REQUESTS}
                max_requests: 1024
                max_retries: ${RETRY_ATTEMPTS}
          outlier_detection:
            consecutive_5xx: ${FAILURE_THRESHOLD}
            interval: 10s
            base_ejection_time: 30s
            max_ejection_percent: 100
          load_assignment:
            cluster_name: ${SERVICE_NAME}
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: ${SERVICE_NAME}.user.svc.cluster.local
                          port_value: 80

      listeners:
        - name: listener_http
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    codec_type: AUTO
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: ${SERVICE_NAME}_vh
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: ${SERVICE_NAME}
                                retry_policy:
                                  retry_on: gateway-error,connect-failure,refused-stream
                                  num_retries: ${RETRY_ATTEMPTS}
                                  per_try_timeout: ${PER_TRY_TIMEOUT}
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
